--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         /* --- LAYOUT GRID --- */
         .container {
             display: grid;
-            /* Wider left column (180px) for more room */
-            grid-template-columns: 180px 1fr 380px; 
+            /* Column 1: Nav | Column 2: Content | Column 3: Info */
+            /* Adjusted widths to shift white panel left and balance gaps */
+            grid-template-columns: 140px 1fr 340px; 
             height: 100vh;
             width: 100%;
         }
@@ -41,20 +42,20 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: center;
+            align-items: center; /* Centers numbers in the grey room */
         }
 
         .nav-list {
             list-style: none;
             display: flex;
             flex-direction: column;
-            gap: 35px;
+            gap: 30px;
         }
 
         .nav-item a {
-            font-size: 1.1rem;
+            font-size: 1rem;
             font-weight: bold;
-            color: #888;
+            color: #b0b0b0;
             text-decoration: none;
         }
 
@@ -73,6 +74,9 @@
             scroll-behavior: smooth;
             scrollbar-width: none;
             -ms-overflow-style: none;
+            /* Subtle border to define the panel against grey */
+            border-left: 1px solid #e8e8e8;
+            border-right: 1px solid #e8e8e8;
         }
 
         .main-content::-webkit-scrollbar {
@@ -85,34 +89,33 @@
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
-            /* SYMMETRY: Equal padding (80px) on left and right of text */
-            padding: 100px 80px; 
+            /* Internal gaps: Text to edge of white panel (reduced) */
+            padding: 80px 50px; 
         }
 
         .project-header {
-            margin-bottom: 25px;
+            margin-bottom: 20px;
         }
 
         .project-title {
             color: #0044cc;
-            font-size: 1.4rem;
+            font-size: 1.3rem;
             font-weight: 700;
-            margin-right: 8px;
+            margin-right: 6px;
         }
 
         .project-year {
             color: #aaa;
-            font-size: 1.1rem;
+            font-size: 1rem;
             font-weight: 400;
         }
 
         .text-block {
-            font-size: 0.95rem;
+            font-size: 0.9rem;
             line-height: 1.5;
             color: #333;
-            /* Max width helps keep the text block compact and centered */
-            max-width: 100%; 
-            margin-bottom: 40px;
+            max-width: 100%;
+            margin-bottom: 30px;
         }
 
         /* --- RIGHT PANEL (GREY) --- */
@@ -121,41 +124,39 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            padding: 0 40px; /* Centered padding for the right content */
+            /* The gap between the white panel edge and this text */
+            padding-left: 50px; 
         }
 
         .logo {
             font-family: 'BBH Bartle', 'Arial Black', sans-serif;
             color: #0044cc;
-            /* Adjusted size and scale to ensure it fits the container width */
-            font-size: 3rem; 
-            line-height: 0.85;
+            font-size: 2.2rem; /* Reduced size to fit neatly */
+            line-height: 0.9;
             text-transform: uppercase;
             letter-spacing: -1px;
-            margin-bottom: 25px;
-            transform: scaleX(1.2); 
+            margin-bottom: 20px;
+            transform: scaleX(1.25); 
             transform-origin: left;
-            word-wrap: break-word;
-            width: 100%;
         }
 
         .email {
             font-weight: 700;
             color: #999;
-            font-size: 0.9rem;
-            margin-bottom: 45px;
+            font-size: 0.85rem;
+            margin-bottom: 40px;
             display: block;
             text-decoration: none;
         }
 
         .social-link {
-            font-size: 1.3rem;
+            font-size: 1.2rem;
             font-weight: 700;
             color: #a0a0a0;
             text-decoration: underline;
             text-decoration-color: #ccc;
-            text-underline-offset: 6px;
-            margin-bottom: 20px;
+            text-underline-offset: 5px;
+            margin-bottom: 18px;
             display: block;
             width: fit-content;
         }
@@ -189,7 +190,7 @@
                     <p>Supplementary text, supplementary text. When rabbits hop rainbows reindeers tweet jump juice when I call reddit eyebrows.</p>
                 </div>
                 <div class="text-block">
-                    <p>The gap on the left and right side of this text is now identical, making the white panel look perfectly balanced.</p>
+                    <p>Supplementary text, supplementary text. When rabbits hop rainbows reindeers tweet jump juice when I call reddit eyebrows.</p>
                 </div>
             </section>
 
@@ -199,7 +200,7 @@
                     <span class="project-year">2024</span>
                 </header>
                 <div class="text-block">
-                    <p>Content for the second slide. Note how the number panel to the left feels more spacious now.</p>
+                    <p>The gap from the white edge to the numbers on the left is now balanced with the gap to the text on the right.</p>
                 </div>
             </section>
 
