--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center; /* Centers numbers in the grey room */
-            padding-left: 20px;
+            padding-right: 30px;
         }
 
         .nav-list {
@@ -126,7 +126,7 @@
             flex-direction: column;
             justify-content: center;
             /* The gap between the white panel edge and this text */
-            padding-left: 50px; 
+            padding-left: 30px; 
         }
 
         .logo {
