--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center; /* Centers numbers in the grey room */
-            padding-right: 30px;
+            padding-left: 40px;
         }
 
         .nav-list {
@@ -132,7 +132,7 @@
         .logo {
             font-family: 'BBH Bartle', 'Arial Black', sans-serif;
             color: #0044cc;
-            font-size: 2.2rem; /* Reduced size to fit neatly */
+            font-size: 1.7rem; /* Reduced size to fit neatly */
             line-height: 0.9;
             text-transform: uppercase;
             letter-spacing: -1px;
