--- a/index.html
+++ b/index.html
@@ -241,79 +241,83 @@
 
         <section id="page1">
             <div class="project-content">
-                <h2 class="project-title font-title">"Characterization of Great Toe Extension Strength Using ToeScale"</h2>
+                <h2 class="project-title font-title">Co-Auther in Research Paper “Lagged Relationships Between Sleep, Balance, and Cognition in Older Adults”</h2>
                 <p class="project-year font-body">2024</p>
                 
                 <ul class="project-list font-body">
-                    <li>Created a database incorporating demographics and results from the toe strength testing device.</li>
-                    <li>Attend weekly meetings.</li>
-                    <li>Utilized Python to read ToeScale data.</li>
-                    <li>Organized data points on JMP spreadsheets.</li>
-                    <li>Employed MATLAB to analyze participant data.</li>
-                    <li>Showcased the results through a spreadsheet designed with Python.</li>
+                    <li>Extracted key information from 30+ research papers to construct a summary chart defining methods, demographics, and analysis.</li>
+                    <li>Led the intern team in literature review, held weekly meetings.</li>
+                    <li>Used the Oura Ring(device for research) and developed a protocol to guide senior participants in operating the device.</li>
+                    <li>Designed a recruitment poster with study details.</li>
+                    <li>Created a final poster with the intern team and had an academic presentation session of the process and final results. </li>
                 </ul>
 
                 <div class="btn-group font-body">
                     <a href="#" class="btn">Link to Research</a>
-                    <a href="#" class="btn">Final Portfolio</a>
+                    <a href="#" class="btn">Final Poster</a>
                 </div>
             </div>
         </section>
 
         <section id="page2">
             <div class="project-content">
-                <h2 class="project-title font-title">"Project Title Placeholder Two"</h2>
-                <p class="project-year font-body">2023</p>
+                <h2 class="project-title font-title">Participation in Research Paper “Characterization of Great Toe Extension Strength Using ToeScale”</h2>
+                <p class="project-year font-body">2024</p>
                 <ul class="project-list font-body">
-                    <li>Developed comprehensive data analysis tools using Python.</li>
-                    <li>Collaborated with cross-functional teams to define requirements.</li>
-                    <li>Implemented machine learning algorithms for predictive modeling.</li>
+                    <li>Created a database incorporating participant information, demographics, and results from the toe strength testing device. </li>
+                    <li>Attend weekly meetings for UF Technology for Occupational Performance Lab. </li>
+                    <li>Utilized Python to automatically read through the result files from ToeScale and organize data points on JMP spreadsheets. </li>
+                    <li>Employed MATLAB to analyze participant data, including calculations of variables including 80% rise time and variance. </li>
+                    <li>Showcased the results through a spreadsheet designed with Python. </li>
                 </ul>
                 <div class="btn-group font-body">
-                    <a href="#" class="btn">View Project</a>
+                    <a href="#" class="btn">Link to Research</a>
                 </div>
             </div>
         </section>
 
         <section id="page3">
             <div class="project-content">
-                <h2 class="project-title font-title">"Project Title Placeholder Three"</h2>
-                <p class="project-year font-body">2023</p>
+                <h2 class="project-title font-title">Personal Reserach Project "Effectiveness of Learning Methods in College of Business Online Courses"</h2>
+                <p class="project-year font-body">2024</p>
                 <ul class="project-list font-body">
-                    <li>Designed user interface prototypes using Figma.</li>
-                    <li>Conducted user testing sessions to gather feedback.</li>
-                    <li>Iterated on design based on usability metrics.</li>
+                    <li>Designed and administered a Qualtrics survey of 44 undergraduate students to evaluate the effectiveness of online learning methods in business courses. </li>
+                    <li>Analyzed quantitative results using Excel and analysis of open-ended responses and identified how asynchronous resources were most effective for learning.</li>
+                    <li>Highlighted the trade-off between flexibility and interaction in online education.</li>
+                    <li>Created a final poster, had an academic presentation session.</li>
                 </ul>
                 <div class="btn-group font-body">
-                    <a href="#" class="btn">View Project</a>
+                    <a href="#" class="btn">Final Report</a>
+                    <a href="#" class="btn">Final Poster</a>
                 </div>
             </div>
         </section>
 
         <section id="page4">
             <div class="project-content">
-                <h2 class="project-title font-title">"Project Title Placeholder Four"</h2>
-                <p class="project-year font-body">2022</p>
+                <h2 class="project-title font-title">Website Building for Fauna Conservation & Analytics, LLC</h2>
+                <p class="project-year font-body">2024</p>
                 <ul class="project-list font-body">
-                    <li>Automated reporting processes using SQL and Tableau.</li>
-                    <li>Reduced manual data entry time by 40%.</li>
+                    <li>Designed and built a professional website for the company. </li>
+                    <li>Made a seperate employee website and a event website. </li>
+                    <li>Weekly meetings to discuss contents and organization of websites.</li>
                 </ul>
                 <div class="btn-group font-body">
-                    <a href="#" class="btn">View Project</a>
+                    <a href="#" class="btn">Link to Website</a>
                 </div>
             </div>
         </section>
 
         <section id="page5">
             <div class="project-content">
-                <h2 class="project-title font-title">"Project Title Placeholder Five"</h2>
-                <p class="project-year font-body">2022</p>
+                <h2 class="project-title font-title">Compilation of Essays</h2>
+                <p class="project-year font-body">2025</p>
                 <ul class="project-list font-body">
                     <li>Lead a team of 4 developers for the hackathon.</li>
                     <li>Built a full-stack web application using React and Node.js.</li>
                 </ul>
                 <div class="btn-group font-body">
-                    <a href="#" class="btn">View Project</a>
+                    <a href="#" class="btn">Essays</a>
                 </div>
             </div>
         </section>
