--- a/index.html
+++ b/index.html
@@ -245,11 +245,11 @@
                 <p class="project-year font-body">2024</p>
                 
                 <ul class="project-list font-body">
-                    <li>Extracted key information from 30+ research papers to construct a summary chart defining methods, demographics, and analysis.</li>
-                    <li>Led the intern team in literature review, held weekly meetings.</li>
-                    <li>Used the Oura Ring(device for research) and developed a protocol to guide senior participants in operating the device.</li>
+                    <li>Led the intern team in literature review of 30+ reserach papers. </li>
+                    <li>Extracted key information of methods, demographics, and analysis.</li>
+                    <li>Used the Oura Ring(device for research) and developed a protocol to guide senior participants.</li>
                     <li>Designed a recruitment poster with study details.</li>
-                    <li>Created a final poster with the intern team and had an academic presentation session of the process and final results. </li>
+                    <li>Created a final poster with the intern team and had an academic presentation session. </li>
                 </ul>
 
                 <div class="btn-group font-body">
@@ -264,10 +264,10 @@
                 <h2 class="project-title font-title">Participation in Research Paper “Characterization of Great Toe Extension Strength Using ToeScale”</h2>
                 <p class="project-year font-body">2024</p>
                 <ul class="project-list font-body">
-                    <li>Created a database incorporating participant information, demographics, and results from the toe strength testing device. </li>
+                    <li>Created a database incorporating participant data and results from the toe strength testing device. </li>
                     <li>Attend weekly meetings for UF Technology for Occupational Performance Lab. </li>
-                    <li>Utilized Python to automatically read through the result files from ToeScale and organize data points on JMP spreadsheets. </li>
-                    <li>Employed MATLAB to analyze participant data, including calculations of variables including 80% rise time and variance. </li>
+                    <li>Utilized Python to automatically read the result files from ToeScale and organize data points on JMP spreadsheets. </li>
+                    <li>Employed MATLAB to analyze participant data and calculate of variables including 80% rise time and variance. </li>
                     <li>Showcased the results through a spreadsheet designed with Python. </li>
                 </ul>
                 <div class="btn-group font-body">
