--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <ul class="project-list font-body">
                     <li>Created a database incorporating participant data and results from the toe strength testing device. </li>
                     <li>Attend weekly meetings for UF Technology for Occupational Performance Lab. </li>
-                    <li>Utilized Python to automatically read the result files from ToeScale and organize data points on JMP spreadsheets. </li>
+                    <li>Utilized Python to read the result files from ToeScale and organize data points on JMP spreadsheets. </li>
                     <li>Employed MATLAB to analyze participant data and calculate of variables including 80% rise time and variance. </li>
                     <li>Showcased the results through a spreadsheet designed with Python. </li>
                 </ul>
@@ -313,8 +313,10 @@
                 <h2 class="project-title font-title">Compilation of Essays</h2>
                 <p class="project-year font-body">2025</p>
                 <ul class="project-list font-body">
-                    <li>Lead a team of 4 developers for the hackathon.</li>
-                    <li>Built a full-stack web application using React and Node.js.</li>
+                    <li>.</li>
+                    <li>Each literature in essay was discussion group.</li>
+                    <li>Each essay went through a peer review session and revisal afterwards.</li>
+                    <li>sds</li>
                 </ul>
                 <div class="btn-group font-body">
                     <a href="#" class="btn">Essays</a>
