--- a/index.html
+++ b/index.html
@@ -313,10 +313,8 @@
                 <h2 class="project-title font-title">Compilation of Essays</h2>
                 <p class="project-year font-body">2025</p>
                 <ul class="project-list font-body">
-                    <li>.</li>
-                    <li>Each literature in essay was discussion group.</li>
-                    <li>Each essay went through a peer review session and revisal afterwards.</li>
-                    <li>sds</li>
+                    <li>Each literature in essay was reviewed in a discussion group.</li>
+                    <li>Peer review and revisal session was set for each essays.</li>
                 </ul>
                 <div class="btn-group font-body">
                     <a href="#" class="btn">Essays</a>
