--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 <p class="project-year font-body">2024</p>
                 
                 <ul class="project-list font-body">
-                    <li>Led the intern team in literature review of 30+ reserach papers. </li>
+                    <li>Led the intern team in literature review of 29 reserach papers. </li>
                     <li>Extracted key information of methods, demographics, and analysis.</li>
                     <li>Used the Oura Ring(device for research) and developed a protocol to guide senior participants.</li>
                     <li>Designed a recruitment poster with study details.</li>
