--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     <li>Created a final poster, had an academic presentation session.</li>
                 </ul>
                 <div class="btn-group font-body">
-                    <a href="#" class="btn">Final Report</a>
+                    <a href="#" class="btn">Research Report</a>
                     <a href="#" class="btn">Final Poster</a>
                 </div>
             </div>
