--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
             <a href="mailto:YUSUNJUNG@UFL.EDU" class="email-link font-title">YUSUNJUNG@UFL.EDU</a>
             
             <div class="btn-group font-body">
-                <a href="assets/Resume.pdf" class="btn">Resume</a>
-                <a href="https://www.linkedin.com/in/yusun-jung-7b2411278/" class="btn">Linkedin</a>
+                <a href="assets/Resume.pdf" class="btn" target="_blank" rel="noopener">Resume</a>
+                <a href="https://www.linkedin.com/in/yusun-jung-7b2411278/" class="btn" target="_blank" rel="noopener">Linkedin</a>
             </div>
         </section>
 
@@ -253,8 +253,8 @@
                 </ul>
 
                 <div class="btn-group font-body">
-                    <a href="https://www.centerwatch.com/clinical-trials/listings/NCT06584136/lagged-relationships-between-sleep-balance-and-cognition-in-older-adults" class="btn">Link to Research</a>
-                    <a href="assets/Final Poster1.pdf" class="btn">Final Poster</a>
+                    <a href="https://www.centerwatch.com/clinical-trials/listings/NCT06584136/lagged-relationships-between-sleep-balance-and-cognition-in-older-adults" class="btn" target="_blank" rel="noopener">Link to Research</a>
+                    <a href="assets/Final Poster1.pdf" class="btn" target="_blank" rel="noopener">Final Poster</a>
                 </div>
             </div>
         </section>
@@ -271,7 +271,7 @@
                     <li>Showcased the results through a spreadsheet designed with Python. </li>
                 </ul>
                 <div class="btn-group font-body">
-                    <a href="https://www.mdpi.com/1424-8220/24/15/4841" class="btn">Link to Research</a>
+                    <a href="https://www.mdpi.com/1424-8220/24/15/4841" class="btn" target="_blank" rel="noopener">Link to Research</a>
                 </div>
             </div>
         </section>
@@ -287,8 +287,8 @@
                     <li>Created a final poster, had an academic presentation session.</li>
                 </ul>
                 <div class="btn-group font-body">
-                    <a href="assets/Research Report.pdf" class="btn">Research Report</a>
-                    <a href="assets/Final Poster2.pdf" class="btn">Final Poster</a>
+                    <a href="assets/Research Report.pdf" class="btn" target="_blank" rel="noopener">Research Report</a>
+                    <a href="assets/Final Poster2.pdf" class="btn" target="_blank" rel="noopener">Final Poster</a>
                 </div>
             </div>
         </section>
@@ -303,7 +303,7 @@
                     <li>Weekly meetings to discuss contents and organization of websites.</li>
                 </ul>
                 <div class="btn-group font-body">
-                    <a href="https://fauna-conservation-analytics-llc.square.site/" class="btn">Link to Website</a>
+                    <a href="https://fauna-conservation-analytics-llc.square.site/" class="btn" target="_blank" rel="noopener">Link to Website</a>
                 </div>
             </div>
         </section>
@@ -317,7 +317,7 @@
                     <li>Peer review and revisal session was set for each essays.</li>
                 </ul>
                 <div class="btn-group font-body">
-                    <a href="assets/Essays.pdf" class="btn">Essays</a>
+                    <a href="assets/Essays.pdf" class="btn" target="_blank" rel="noopener">Essays</a>
                 </div>
             </div>
         </section>
